2009-12-11 01:44-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/synchronization.m: Corrected header text.  

2009-12-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Use -hash from GSString rather than from NSString
	to optimise hashing.  Fix string comparison error as pointed out by
	Doug Simons.

2009-12-02 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMessagePortNameServer.m:
	* Source/NSMessagePort.m:
	On initialisation, remove any old ports/names for the current process
	idntifier.  Also remove ports/names for processes which don't exist.
	Avoids any possibility of nameserver confusion between two processes
	with the same ID.

2009-12-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMessagePortNameServer.m: Tolerate '*' host name.
	* Source/NSConnection.m: Clarify documentation slightly.
	* NSSocketPort.m:
	* win32/GSFileHandle.m:
	Fixup missing notification changes.

2009-11-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationQueue.m: Rewrite queue handling to attempt to
	fix bug #28104 by posting notifications matching the current run loop
	mode and leaving others queued.
	Also, change the meanining of a nil modes argument when enqueing a
	notification to match OSX and assume NSDefaultRunLoopMode.
	* Source/Additions/GSXML.m: Fix minor sax callback bug.
	* Source/NSConnection.m: Don't send a response packet if the method
	is oneway void return type and has no output parameters.

2009-11-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: When serializing 'xml' style property lists
	call -description to ensure that dictionary keys are strings since no
	other option is permitted in the dtd.

2009-11-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationQueue.m:
	* Source/NSRunLoop.m:
	* Source/unix/GSRunLoopCtxt.m:
	* Source/win32/GSRunLoopCtxt.m:
	* Source/GSPrivate.h:
	Pass current runloop mode to notification functions.  Next we need
	to add code to use this information.
